--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,13 @@ body {
   background-color: #e0e0e0;
 }
 
+.article-container{
+  width: 100%;
+}
+
 .article {
+  margin: 1rem auto;
+  max-width: 600px;
   background-color: #fafafa;
 }
 
